objects/ProductAttribute.object
<CustomObject>
    <fields>
        <fullName>Brand_Attribute__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SunFusion</fullName>
                </value>
                <value>
                    <fullName>SolarWave</fullName>
                </value>
                <value>
                    <fullName>PhotonPower</fullName>
                </value>
                <value>
                    <fullName>LuminaSol</fullName>
                </value>
                <value>
                    <fullName>StarVolt</fullName>
                </value>
                <value>
                    <fullName>SunSavvy</fullName>
                </value>
                <value>
                    <fullName>Cirrus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Clothing_Colors__c</fullName>
        <label>Clothing Colors</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Grey</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Black</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>White</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Clothing_Sizes__c</fullName>
        <label>Clothing Sizes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>XS</fullName>
                </value>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
                <value>
                    <fullName>XL</fullName>
                </value>
                <value>
                    <fullName>XXL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <label>Color</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Blue</fullName>
                </value>
                <value>
                    <fullName>Black</fullName>
                </value>
                <value>
                    <fullName>Orange</fullName>
                    <isActive>false</isActive>
                    <label>Orange</label>
                </value>
                <value>
                    <fullName>White</fullName>
                    <isActive>false</isActive>
                    <label>White</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Controller__c</fullName>
        <label>Controller</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Single Controller</fullName>
                </value>
                <value>
                    <fullName>Dual Controller</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>This is used to consistently import data to a version of the SDO and translate data into other languages.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Length__c</fullName>
        <label>Length</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1/2 in</fullName>
                </value>
                <value>
                    <fullName>3/4 in</fullName>
                </value>
                <value>
                    <fullName>1 in</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <label>Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1200 Watts</fullName>
                </value>
                <value>
                    <fullName>1600 Watts</fullName>
                </value>
                <value>
                    <fullName>10200 mAh (37.74 Wh)</fullName>
                    <isActive>false</isActive>
                    <label>10200 mAh (37.74 Wh)</label>
                </value>
                <value>
                    <fullName>19200 mAh (71.04 Wh)</fullName>
                    <isActive>false</isActive>
                    <label>19200 mAh (71.04 Wh)</label>
                </value>
                <value>
                    <fullName>26800 mAh (99 Wh)</fullName>
                    <isActive>false</isActive>
                    <label>26800 mAh (99 Wh)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <label>Subscription</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>One-Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Warranty_Options__c</fullName>
        <label>Warranty Length</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>5 Years</fullName>
                </value>
                <value>
                    <fullName>10 Years</fullName>
                </value>
                <value>
                    <fullName>15 Years</fullName>
                </value>
                <value>
                    <fullName>25 Years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>